# getemote

./: .gitignore  CMakeLists.txt  README.md
proto/: get_emotes.py  non_blocking_curl.c
src/: app.c  app.h  auth_handler.c  auth_handler.h  channel_view.c  channel_view.h  config.c  config.h  emote.c  emote_info.h  emote_list.h  main.c  request.c  request.h  request_handler.c  request_handler.h  resources.c  resources.h  twitch_requests.h  util.c  util.h
src/emotes/: emote.c  emote.h  emote_info.c  emote_list.c  emote_list.h  url_lookup.c  url_lookup.h
src/interface/: channel_view.c  channel_view.h  input_line.c  input_line.h  interface.c  interface.h  recent_view.c  recent_view.h  search_bar.c  search_bar.h  single_view.c  single_view.h
src/reqs/: auth_handler.c  channel_lookup.c  channel_lookup.h  request.c  request.h  request_handler.c  request_handler.h  twitch_requests.c  twitch_requests.h
tokens/: CLIENT_ID  CLIENT_SECRET
